# OLXProject

./: .env.exmple  .gitignore  Makefile  pyproject.toml
apps/: admin.py  apps.py  forms.py  serializers.py  urls.py  views.py
apps/fixtures/: categories.json  products.json  productspecifications.json
apps/models/: __init__.py  base.py  categorys.py  managers.py  products.py  users.py  utils.py
root/: settings.py  urls.py
