[project]
name = "olxproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "django==6.0.2",
    "django-humanize>=0.1.2",
    "django-jazzmin==3.0.2",
    "django-mptt>=0.18.0",
    "dotenv>=0.9.9",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
]
